--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -16,11 +16,20 @@
         .image-container img {
             width: 200px;
             height: auto;
-            transition: transform 0.2s;
         }
+        /* Remove previous hover effect */
         .image-container img:hover {
-            transform: scale(2);
-            z-index: 2;
+            transform: none;
+        }
+        /* Magnifier Glass */
+        .magnifier-glass {
+            position: absolute;
+            border: 3px solid #000;
+            border-radius: 50%;
+            cursor: none;
+            /* Adjust the size of the magnifier glass */
+            width: 150px;
+            height: 150px;
         }
         .low-res {
             margin: 20px;
@@ -35,22 +44,22 @@
         }
     </style>
 </head>
-<body>
+<body onload="initializeMagnifiers()">
     <h1>Select the Best Super-Resolution Image</h1>
-    <h3>Image {{ index + 1 }} of {{ image_sets|length }}</h3>
+    <h3>Image {{ index + 1 }} of {{ total_images }}</h3>
     <div class="low-res">
         <h3>Low-Resolution Image</h3>
-        <img src="{{ image_set['low_res'] }}" alt="Low Resolution">
+        <img src="{{ url_for('static', filename=image_set['low_res']) }}" alt="Low Resolution">
     </div>
     <form method="post">
         <input type="hidden" name="img_name" value="{{ image_set['low_res'].split('/')[-1] }}">
         <input type="hidden" name="index" value="{{ index }}">
         <div class="super-res-images">
             {% for img in image_set['super_res_images'] %}
-            <div class="image-container">
+            <div class="image-container magnify">
                 <label>
                     <input type="radio" name="selected_model" value="{{ img['model'] }}" required>
-                    <img src="{{ img['path'] }}" alt="{{ img['model'] }}">
+                    <img id="img-{{ loop.index }}" src="{{ url_for('static', filename=img['path']) }}" alt="{{ img['model'] }}">
                 </label>
             </div>
             {% endfor %}
@@ -59,5 +68,64 @@
             <button type="submit">Submit and Next</button>
         </div>
     </form>
+    <script>
+    function magnify(imgID, zoom) {
+        var img, glass, w, h, bw;
+        img = document.getElementById(imgID);
+
+        /* Create magnifier glass: */
+        glass = document.createElement("DIV");
+        glass.setAttribute("class", "magnifier-glass");
+
+        /* Insert magnifier glass: */
+        img.parentElement.insertBefore(glass, img);
+
+        /* Set background properties for the magnifier glass: */
+        glass.style.backgroundImage = "url('" + img.src + "')";
+        glass.style.backgroundRepeat = "no-repeat";
+        glass.style.backgroundSize = (img.width * zoom) + "px " + (img.height * zoom) + "px";
+        bw = 3;
+        w = glass.offsetWidth / 2;
+        h = glass.offsetHeight / 2;
+
+        /* Execute a function when someone moves the magnifier glass over the image: */
+        glass.addEventListener("mousemove", moveMagnifier);
+        img.addEventListener("mousemove", moveMagnifier);
+
+        /* For touch screens: */
+        glass.addEventListener("touchmove", moveMagnifier);
+        img.addEventListener("touchmove", moveMagnifier);
+
+        function moveMagnifier(e) {
+            var pos, x, y;
+            e.preventDefault();
+            pos = getCursorPos(e);
+            x = pos.x;
+            y = pos.y;
+            if (x > img.width - (w / zoom)) { x = img.width - (w / zoom); }
+            if (x < w / zoom) { x = w / zoom; }
+            if (y > img.height - (h / zoom)) { y = img.height - (h / zoom); }
+            if (y < h / zoom) { y = h / zoom; }
+            glass.style.left = (x - w) + "px";
+            glass.style.top = (y - h) + "px";
+            glass.style.backgroundPosition = "-" + ((x * zoom) - w + bw) + "px -" + ((y * zoom) - h + bw) + "px";
+        }
+
+        function getCursorPos(e) {
+            var a, x = 0, y = 0;
+            e = e || window.event;
+            a = img.getBoundingClientRect();
+            x = e.pageX - a.left - window.pageXOffset;
+            y = e.pageY - a.top - window.pageYOffset;
+            return { x: x, y: y };
+        }
+    }
+
+    function initializeMagnifiers() {
+        {% for img in image_set['super_res_images'] %}
+            magnify('img-{{ loop.index }}', 3);  // Adjust zoom level as needed
+        {% endfor %}
+    }
+    </script>
 </body>
 </html>
