--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Image Quality Assessment Test</title>
+    <title>Super Resolution Experiment</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
         /* General Styles */
         body, html {
