--- a/flask/templates/start.html
+++ b/flask/templates/start.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Super Resolution Experiment</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
         body {
             background-color: #121212;
