--- a/flask/templates/start.html
+++ b/flask/templates/start.html
@@ -88,9 +88,9 @@
             <div class="instructions">
                 <p><strong>How it works:</strong></p>
                 <ul>
-                    <li>A low-resolution image will appear at the center.</li>
-                    <li>Four enhanced images will be in the corners.</li>
-                    <li>Click to zoom in, then hit "Select" for your choice.</li>
+                    <li>A low-resolution image (255×169) will appear in the center.</li>
+                    <li>Four high-resolution images (1020×676) will be displayed in the corners. </li>
+                    <li>Click an image to zoom in, then hit "Select" to make your choice.</li>
                 </ul>
                 <p>Take your time, there’s no rush! Each choice will automatically load the next task.</p>
                 <p style="font-size: 0.9em; color: #aaaaaa;">
