ahh done (maybe")

--- a/flask/templates/start.html
+++ b/flask/templates/start.html
@@ -74,6 +74,7 @@
 <body>
     <div class="form-container">
         <h2>Welcome to the Super Resolution Experiment</h2>
+        <h3>Total Images: 30 | Estimated Time: 15mins max</h3>
         <form method="post">
             <input type="text" name="name" placeholder="Enter your name" required><br>
             <input type="number" name="age" placeholder="Enter your age" min="1" required><br>
