--- a/flask/templates/thank_you.html
+++ b/flask/templates/thank_you.html
@@ -62,6 +62,40 @@
         .optional-questions button:hover {
             background-color: #45a049;
         }
+        .references {
+            max-width: 800px;
+            margin: 20px auto;
+            background: #070202;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .references h3 {
+            color: #f2f1f1;
+            margin-bottom: 10px;
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 5px;
+        }
+
+        .references ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .references li {
+            margin-bottom: 15px;
+            line-height: 1.6;
+        }
+
+        .references a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
+        .references a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -78,6 +112,33 @@
             
             <button type="submit">Submit Responses 🚀</button>
         </form>
+        <div class="references">
+            <h3>References</h3>
+            <ul>
+                <li>
+                    <strong>ResShift: Efficient Diffusion Model for Image Super-resolution by Residual Shifting</strong><br>
+                    Authors: Zongsheng Yue, Jianyi Wang, Chen Change Loy<br>
+                    URL: <a href="https://github.com/zsyOAOA/ResShift" target="_blank">https://github.com/zsyOAOA/ResShift</a>
+                </li>
+                <li>
+                    <strong>Real-ESRGAN: Training Real-World Blind Super-Resolution with Pure Synthetic Data</strong><br>
+                    Authors: Xintao Wang, Liangbin Xie, Chao Dong, Ying Shan<br>
+                    URL: <a href="https://github.com/xinntao/Real-ESRGAN" target="_blank">https://github.com/xinntao/Real-ESRGAN</a>
+                </li>
+                <li>
+                    <strong>BSRGAN: Designing a Practical Degradation Model for Deep Blind Image Super-Resolution</strong><br>
+                    Authors: Kai Zhang, Jingyun Liang, Luc Van Gool, Radu Timofte<br>
+                    URL: <a href="https://github.com/cszn/BSRGAN" target="_blank">https://github.com/cszn/BSRGAN</a>
+                </li>
+                <li>
+                    <strong>SwinIR: Image Restoration Using Swin Transformer</strong><br>
+                    Authors: Jingyun Liang, Jiezhang Cao, Guolei Sun, Kai Zhang, Luc Van Gool, Radu Timofte<br>
+                    URL: <a href="https://github.com/JingyunLiang/SwinIR" target="_blank">https://github.com/JingyunLiang/SwinIR</a>
+                </li>
+            </ul>
+        </div>
     </div>
+
 </body>
+
 </html>
