--- a/flask/templates/thank_you.html
+++ b/flask/templates/thank_you.html
@@ -102,7 +102,7 @@
     <div class="message-container">
         <h2>🎉 Thank You for Participating! 🎉</h2>
         <p>Your responses have been recorded. You're awesome! 🌟</p>
-        <p>Before you go, could you share a bit about your choices? 🤔</p>
+        <p>Before you go, could you share a bit about your choices? 🥹</p>
         <form class="optional-questions" method="post">
             <label for="reason">✨ Why did you pick certain images? (e.g., colors, details, lack of artifacts)</label>
             <textarea id="reason" name="reason" rows="4" placeholder="Tell us your thoughts! ✍️"></textarea>
@@ -116,23 +116,19 @@
             <h3>References</h3>
             <ul>
                 <li>
-                    <strong>ResShift: Efficient Diffusion Model for Image Super-resolution by Residual Shifting</strong><br>
-                    Authors: Zongsheng Yue, Jianyi Wang, Chen Change Loy<br>
+                    <strong>ResShift</strong><br>
                     URL: <a href="https://github.com/zsyOAOA/ResShift" target="_blank">https://github.com/zsyOAOA/ResShift</a>
                 </li>
                 <li>
-                    <strong>Real-ESRGAN: Training Real-World Blind Super-Resolution with Pure Synthetic Data</strong><br>
-                    Authors: Xintao Wang, Liangbin Xie, Chao Dong, Ying Shan<br>
+                    <strong>Real-ESRGAN</strong><br>
                     URL: <a href="https://github.com/xinntao/Real-ESRGAN" target="_blank">https://github.com/xinntao/Real-ESRGAN</a>
                 </li>
                 <li>
-                    <strong>BSRGAN: Designing a Practical Degradation Model for Deep Blind Image Super-Resolution</strong><br>
-                    Authors: Kai Zhang, Jingyun Liang, Luc Van Gool, Radu Timofte<br>
+                    <strong>BSRGAN</strong><br>
                     URL: <a href="https://github.com/cszn/BSRGAN" target="_blank">https://github.com/cszn/BSRGAN</a>
                 </li>
                 <li>
-                    <strong>SwinIR: Image Restoration Using Swin Transformer</strong><br>
-                    Authors: Jingyun Liang, Jiezhang Cao, Guolei Sun, Kai Zhang, Luc Van Gool, Radu Timofte<br>
+                    <strong>SwinIR</strong><br>
                     URL: <a href="https://github.com/JingyunLiang/SwinIR" target="_blank">https://github.com/JingyunLiang/SwinIR</a>
                 </li>
             </ul>
