--- a/flask/templates/start.html
+++ b/flask/templates/start.html
@@ -90,7 +90,8 @@
                 <p><strong>How it works:</strong></p>
                 <ul>
                     <li>A low-resolution image (255×169) will appear in the center.</li>
-                    <li>Four high-resolution images (1020×676) will be displayed in the corners. </li>
+                    <li>Four high-resolution images (1020×676) will be displayed.</li>
+                    <li>Your task is to evaluate the images carefully and pick the one you think is the best in terms of quality.</li>
                     <li>Click an image to zoom in, then hit "Select" to make your choice.</li>
                 </ul>
                 <p>Take your time, there’s no rush! Each choice will automatically load the next task.</p>
